@@ -1,3 +1,8 @@
+2015-01-13  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/64528
+	* gfortran.dg/pr64528.f90: New test.
+
 2015-01-13  Richard Sandiford  <richard.sandiford@arm.com>
 
 	* gcc.target/aarch64/subsp.c: New test.
