@@ -1,3 +1,9 @@
+2015-01-13  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/64528
+	* trans-decl.c (create_function_arglist): Don't set TREE_READONLY
+	on dummy args with VALUE attribute.
+
 2015-01-11  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/63733
